Fix bug on mobile of oversized title in docs.

--- a/sass/_page.scss
+++ b/sass/_page.scss
@@ -12,6 +12,9 @@
 
   h1 {
     color: $white;
+    @media (max-width: 768px) {
+      font-size: 2.5rem;
+    }
   }
 }
 
