--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -256,17 +256,23 @@ body {
 #top-banner h1 {
   color: #f5f5f5;
 }
+@media (max-width: 768px) {
+  /* line 13, ../sass/_page.scss */
+  #top-banner h1 {
+    font-size: 2.5rem;
+  }
+}
 
-/* line 19, ../sass/_page.scss */
+/* line 22, ../sass/_page.scss */
 #content {
   background-color: #f5f5f5;
   padding: 40px 0px;
 }
-/* line 23, ../sass/_page.scss */
+/* line 26, ../sass/_page.scss */
 #content h2, #content h3, #content h4, #content h5, #content h6 {
   color: #00e676;
 }
-/* line 27, ../sass/_page.scss */
+/* line 30, ../sass/_page.scss */
 #content h4 {
   font-size: 1.2em;
 }
